# band-of-agents

./: README.md  pyproject.toml  render.yaml
src/band_of_agents/: __init__.py  agents_orchestrator.py  band_client.py  band_orchestrator.py  db.py  main.py  review_repository.py
src/band_of_agents/agents/: chat_summarizer.py  compliance.py  cost.py  reliability.py  security.py  summarizer.py
tests/: test_agents_orchestrator.py  test_band_orchestrator.py  test_main.py
