[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "band-of-agents"
version = "0.1.0"
description = "A small FastAPI scaffold for Band of Agents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "uuid",
    "openai"
]

[project.optional-dependencies]
dev = [
    "httpx",
    "pytest",
    "uuid",
    "openai"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
